--- a/crates/tsp/Cargo.toml
+++ b/crates/tsp/Cargo.toml
@@ -8,4 +8,10 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.0"
+criterion = "0.3"
+plotters = "^0.3.0"
 # num_cpus = "1.13.0"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
